--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,6 @@
 
 :focus {
   outline: none !important;
-  /* outline-offset: 2px;
-  -webkit-transition: all 100ms ease-in-out;
-  -o-transition: all 100ms ease-in-out;
-  transition: all 100ms ease-in-out; */
 }
 
 html,
@@ -50,35 +46,55 @@ body {
           flex-direction: column;
   background-color: #141414;
   /*justify-content: center;*/
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 main {
   -webkit-box-flex: 1;
       -ms-flex: 1 0 auto;
           flex: 1 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .grid {
-  margin: 20px 0;
+  margin-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  height: 300px;
-  width: 420px;
-  border: 1px solid var(--red);
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: auto;
+  width: 430px;
 }
 
 .grid img {
   cursor: pointer;
-  margin: 0 auto;
+  margin: 3px;
+  -webkit-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
-  transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
 }
 
 footer {
@@ -127,10 +143,12 @@ a:hover:after  {
     opacity: 1;
 }
 
-.flip1 {animation: spin-cat-1 .2s;}
-.flip2 {animation: spin-cat-2 .2s;}
-@keyframes spin-cat-1 {50%{transform:rotateY(180deg);}}
-@keyframes spin-cat-2 {50%{transform:rotateY(180deg);}}
+.flip1 {-webkit-animation: spin-cat-1 .2s;animation: spin-cat-1 .2s;}
+.flip2 {-webkit-animation: spin-cat-2 .2s;animation: spin-cat-2 .2s;}
+@-webkit-keyframes spin-cat-1 {50%{-webkit-transform:rotateY(180deg);transform:rotateY(180deg);}}
+@keyframes spin-cat-1 {50%{-webkit-transform:rotateY(180deg);transform:rotateY(180deg);}}
+@-webkit-keyframes spin-cat-2 {50%{-webkit-transform:rotateY(180deg);transform:rotateY(180deg);}}
+@keyframes spin-cat-2 {50%{-webkit-transform:rotateY(180deg);transform:rotateY(180deg);}}
 
 #reset {
   border: 0;
@@ -152,16 +170,22 @@ a:hover:after  {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   content: '';
   width: 100%;
   height: 100%;
   background-color: rgba(249, 51, 24, 0.288);
   border-radius: .5rem;
   opacity: 0;
+  -webkit-transition: all .115s ease-in-out;
+  -o-transition: all .115s ease-in-out;
   transition: all .115s ease-in-out;
-  backface-visibility: hidden;
-  transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
   z-index: -1;
 }
 
@@ -178,21 +202,3 @@ a:hover:after  {
   height: 120%;
   z-index: -1;
 }
-
-/* .flip {
-  -webkit-animation-name: cssAnimation;
-  -webkit-animation-duration:3s;
-  -webkit-animation-iteration-count: 1;
-  -webkit-animation-timing-function: ease;
-  -webkit-animation-fill-mode: forwards;
-}
-@-webkit-keyframes cssAnimation {
-  from {
-    -webkit-transform: rotate(0deg) scale(1) skew(0deg) translate(100px);
-  }
-  to {
-    -webkit-transform: rotate(0deg) scale(2) skew(0deg) translate(100px);
-  }
-} */
-
-
