--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,25 @@ main {
   width: 430px;
 }
 
+@media only screen and (max-width: 600px) {
+  .grid {
+    margin-bottom: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: auto;
+    width: 400px;
+  }
+}
+
 .grid img {
   cursor: pointer;
   margin: 3px;
