--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ main {
       -ms-flex-pack: center;
           justify-content: center;
   height: auto;
-  width: 430px;
+  width: 380px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -125,7 +125,7 @@ footer {
   letter-spacing: .1rem;
   text-align: center;
   padding: 1em;
-  width: 100%;
+  min-width: 100vw;
 }
 
 
